<resources>
    <string name="app_name">NYTimesSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hint">Enter search query</string>
    <string name="search">Search</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="action_newsDesk">News Desk Values</string>
    <string name="action_startDate">Begin Date</string>
    <string name="action_beginDate">Begin Date</string>
    <string name="search_title">Search</string>
    <string name="sort_order">Sort Order</string>
    <string name="newsDeskValues">News Desk Values</string>
    <string name="art">Art</string>
    <string name="fashion">Fashion &amp; Style"</string>
    <string name="sports">Sports</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="snippet">Snippet</string>
    <string-array name="sort_array">
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>
</resources>
