<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="500dp"
    android:paddingRight="10dp"
    android:paddingBottom="20dp"
    android:theme="@android:style/Theme.Holo.Light.Dialog">

    <TextView
        android:id="@+id/tvBeginDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etDate"
        android:layout_alignBottom="@+id/etDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/action_beginDate" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:layout_toEndOf="@+id/tvBeginDate"
        android:layout_toRightOf="@+id/tvBeginDate"
        android:ems="10"
        android:inputType="date"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tvSortOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvBeginDate"
        android:layout_alignStart="@+id/tvBeginDate"
        android:layout_below="@+id/etDate"
        android:layout_marginTop="28dp"
        android:text="@string/sort_order" />

    <Spinner
        android:id="@+id/spSortOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/sort_array"
        android:prompt="@string/sort_order"
        android:layout_alignBaseline="@+id/tvSortOrder"
        android:layout_alignBottom="@+id/tvSortOrder"
        android:layout_alignLeft="@+id/etDate"
        android:layout_alignStart="@+id/etDate"
        android:layout_alignRight="@+id/etDate"
        android:layout_alignEnd="@+id/etDate" />

    <TextView
        android:id="@+id/tvNewsDeskValues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/newsDeskValues"
        android:layout_below="@+id/spSortOrder"
        android:layout_alignLeft="@+id/tvSortOrder"
        android:layout_alignStart="@+id/tvSortOrder" />

    <CheckBox
        android:id="@+id/cbArts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNewsDeskValues"
        android:layout_toLeftOf="@+id/spSortOrder"
        android:layout_toStartOf="@+id/spSortOrder"
        android:text="@string/art" />

    <CheckBox
        android:id="@+id/cbFashion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cbArts"
        android:layout_alignStart="@+id/cbArts"
        android:layout_below="@+id/cbArts"
        android:text="@string/fashion"/>

    <CheckBox
        android:id="@+id/cbSports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sports"
        android:layout_below="@+id/cbFashion"
        android:layout_alignLeft="@+id/cbFashion"
        android:layout_alignStart="@+id/cbFashion" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbSports"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/tvSortOrder"
        android:layout_toRightOf="@+id/tvSortOrder"
        android:background="@color/ampm_text_color"
        android:elevation="7dp"
        android:textColor="@color/white"
        android:text="@string/save" />
</RelativeLayout>